syntax = "proto3";

service CustomerService {
    rpc GetAll (Empty) returns (CustomerList);
    rpc Get (CustomerId) returns (Customer);
    rpc Insert (Customer) returns (Customer);
    rpc Update (Customer) returns (Customer);
    rpc Remove (CustomerId) returns (Empty);
}

message Empty {}

message Customer {
    string id = 1;
    string name = 2;
    string email = 3;
    string address = 4;
}

message CustomerList {
    repeated Customer customers = 1;
}

message CustomerId {
    string id = 1;
}

